--- a/Part2_Introdution_CSS/style.css
+++ b/Part2_Introdution_CSS/style.css
@@ -1,4 +1,18 @@
-h1 {
+/* h1 {
     font-size: 5rem;
     color: red;
+} */
+
+#first-heading{
+    color: green;
+}
+#second-heading{
+    color: red;
+}
+#third-heading{
+    color:rebeccapurple;
+}
+
+.second-heading{
+    color:pink;
 }
