--- a/Part2_Introdution_CSS/style.css
+++ b/Part2_Introdution_CSS/style.css
@@ -24,3 +24,20 @@
     color: var(--text-color);
     /* var(--name-var) */
 }
+.box{
+    background-color: red;
+    width: 100%;
+    height: 200px;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
+.header{
+    width: 100%;
+    height: 100vh;
+    background-size:250px ;
+    /* background-repeat: no-repeat; */
+    background-image: url(https://congthuong-cdn.mastercms.vn/stores/news_dataimages/2022/102022/29/12/in_article/7423d05f-e2f4-4c26-9f6c-1d625c2953d320221029125851.jpg?rt=20221029125854);
+}
