--- a/Part5_Postition-relative/style.css
+++ b/Part5_Postition-relative/style.css
@@ -1,7 +1,13 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 h1{
     margin-top: 100px;
     /* đẩy xuóng dưới */
-    position: relative;
+    /* position: relative; */
     top: 100px;
     left: 100px;
     /* đè lên  */
@@ -12,6 +18,7 @@ h1{
     height: 120px;
     background-color: #333;
     position: relative;
+    margin-top: 100px;
 }
 .box-child{
     width: 50px;
@@ -39,4 +46,20 @@ h1{
     height: 60px;
     background-color: aquamarine;
     position: relative;
+}
+
+.header {
+    width: 100%;
+    height: 100px;
+    background-color: darkslategrey;
+    position: fixed;
+    top: 0;
+
+    /* có thể không đặt width */
+    right: 0;
+    left: 0;
+}
+
+ol{
+    height: 2000px;
 }
