--- a/Part5_Postition-relative/style.css
+++ b/Part5_Postition-relative/style.css
@@ -48,16 +48,24 @@ h1{
     position: relative;
 }
 
-.header {
+/* .header {
     width: 100%;
     height: 100px;
     background-color: darkslategrey;
     position: fixed;
     top: 0;
-
-    /* có thể không đặt width */
     right: 0;
     left: 0;
+} */
+
+.header-sticky {
+    margin-top: 30px;
+    width: 100%;
+    height: 40px;
+    background-color: firebrick;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
 }
 
 ol{
